--- a/.github/workflows/mainwgallery.yml
+++ b/.github/workflows/mainwgallery.yml
@@ -24,7 +24,7 @@ jobs:
         managed-identity: 'myImageBuilderIdentity'
         location: 'eastus2'
         source-os-type: 'linux'        
-        source-image: Canonical:UbuntuServer:18.04-LTS:latest      
+        source-image: canonical:0001-com-ubuntu-server-focal:20_04-lts-arm64:latest      
         customizer-script: |
           sh /tmp/workflow-artifacts/install.sh
         dist-type: 'SharedImageGallery'
