--- a/.github/workflows/mainwgallery.yml
+++ b/.github/workflows/mainwgallery.yml
@@ -14,21 +14,22 @@ jobs:
         creds: ${{secrets.AZURE_CREDENTIALS}}
 
     - name: BUILD WEBAPP
-      run: sudo ${{ GITHUB.WORKSPACE }}/webApp/buildscript.sh # Run necessary build scripts and copies built artifacts to  ${{ GITHUB.WORKSPACE }}/workflow-artifacts
-      
+      run: sudo ${{ GITHUB.WORKSPACE }}buildscript.sh # Run ./mvnw -Pprod clean verify and copies built artifacts to  ${{ GITHUB.WORKSPACE }}/target
 
-    - name: BUILD-CUSTOM-VM-IMAGE      
+    - name: BUILD-CUSTOM-VM-IMAGE  
+      id: imageBuilder    
       uses: azure/build-vm-image@v0
       with:        
-        resource-group-name: 'myResourceGroup'
-        managed-identity: 'myImageBuilderIdentity'
+        resource-group-name: 'vmsonarm'
+        managed-identity: 'vmsonarm'
         location: 'eastus2'
         source-os-type: 'linux'        
         source-image: canonical:0001-com-ubuntu-server-focal:20_04-lts-arm64:latest    
+        customizer-source: '${{ GITHUB.WORKSPACE }}/target'  # This folder gets copied to the image at root
         customizer-script: |
-          sh /tmp/workflow-artifacts/install.sh
+          sh /tmp/vmrun.sh
         dist-type: 'SharedImageGallery'
-        dist-resource-id: '/subscriptions/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx/resourceGroups/myResourceGroup/providers/Microsoft.Compute/galleries/AppTeam/images/ImagesWithApp'
+        dist-resource-id: '/subscriptions/${{secrets.SUBSCRIPTION_ID}}/resourceGroups/vmsonarm/providers/Microsoft.Compute/galleries/vmsonarm/images/vmsonarm'
         dist-location: 'eastus2'
           
         
