--- a/.github/workflows/mainwgallery.yml
+++ b/.github/workflows/mainwgallery.yml
@@ -25,8 +25,8 @@ jobs:
         location: 'eastus2'
         source-os-type: 'linux'    
         source-image-type: 'PlatformImage'    
-        source-image: Canonical:UbuntuServer:18.04-LTS:latest
-        # source-image: canonical:0001-com-ubuntu-server-focal:20_04-lts-arm64:latest    
+        # source-image: Canonical:UbuntuServer:18.04-LTS:latest
+        source-image: Canonical:0001-com-ubuntu-server-focal:20_04-lts-arm64:latest    
         customizer-source: '${{ GITHUB.WORKSPACE }}/target/'  # This folder gets copied to the image at root
         customizer-script: |
           bash ${{ GITHUB.WORKSPACE }}/vmbuildscript.sh
