--- a/.github/workflows/mainwgallery.yml
+++ b/.github/workflows/mainwgallery.yml
@@ -25,11 +25,9 @@ jobs:
         location: 'eastus2'
         source-os-type: 'linux'    
         source-image-type: 'PlatformImage'    
-        # source-image: Canonical:UbuntuServer:18.04-LTS:latest
-        source-image: Canonical:0001-com-ubuntu-server-focal:20_04-lts-arm64:latest    
+        source-image: Canonical:UbuntuServer:18_04-lts-arm64:18.04.202303080
         customizer-source: '${{ GITHUB.WORKSPACE }}/target/'  # This folder gets copied to the image at root
-        customizer-script: |
-          bash ${{ GITHUB.WORKSPACE }}/vmbuildscript.sh
+        customizer-script: bash ${{ GITHUB.WORKSPACE }}/vmbuildscript.sh
         dist-type: 'SharedImageGallery'
         dist-resource-id: '/subscriptions/${{ secrets.SUBSCRIPTION_ID }}/resourceGroups/vmsonarm/providers/Microsoft.Compute/galleries/vmsonarm/images/vmsonarm'
         dist-location: 'eastus2'
