--- a/.github/workflows/mainwgallery.yml
+++ b/.github/workflows/mainwgallery.yml
@@ -26,7 +26,7 @@ jobs:
         source-os-type: 'linux'    
         source-image-type: 'PlatformImage'    
         source-image: Canonical:UbuntuServer:18_04-lts-arm64:18.04.202303080
-        # source-uri: 
+        source-uri: Canonical:UbuntuServer:18_04-lts-arm64:18.04.202303080
         customizer-source: '${{ GITHUB.WORKSPACE }}/target/'  # This folder gets copied to the image at root      
         customizer-script: |
           vmbuildscript.sh
