--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ node_modules/
 npm-debug.log.*
 /.awcache/*
 /.cache-loader/*
+package-lock.json
 
 ######################
 # SASS
@@ -157,4 +158,9 @@ Desktop.ini
 ######################
 /coverage/
 /.nyc_output/
-package-lock.json
+
+######################
+# Configuration files
+######################
+/resources/config/application-prod.yml
+.env
